src/objects/Nokia_Financial_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Current_Future__c</fullName>
        <description>Used this flag in OIF lookup filter</description>
        <formula>End_Date__c &gt;=Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current/Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Period__c</fullName>
        <description>This Field will be used to identify the Active Period</description>
        <formula>AND(End_Date__c&gt;=DATEVALUE(Now()), 
Start_Date__c&lt;=DATEVALUE(Now()))</formula>
        <label>Current Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of Financial  Period (Req:406)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Number__c</fullName>
        <description>Its a pick list value Starting from 1 to 12 (Req:406)</description>
        <label>Period Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter_Name__c</fullName>
        <description>Auto update as per the period name and end year fields  e.g 2017-Q2 (Req;406)</description>
        <formula>(LEFT(Name , 4))&amp;&apos;-Q&apos;&amp;Text(Related_Quarter__c)</formula>
        <label>Quarter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Quarter__c</fullName>
        <description>AS per the period Name,this field will be  auto update(Req.406)</description>
        <label>Related Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Starting Date of  Financial Period (Req:406)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Receiving first 4 letters from Quarter name</description>
        <formula>LEFT(Quarter_Name__c ,4)</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Nokia Financial Calendar</label>
    <listViews>
        <fullName>K2019</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Period_Number__c</columns>
        <columns>Related_Quarter__c</columns>
        <columns>Quarter_Name__c</columns>
        <columns>Current_Period__c</columns>
        <columns>Current_Future__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>2019</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nokia_Calendar</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Quarter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>contains</operation>
            <value>2020,2021,2022</value>
        </filters>
        <label>Nokia Calendar</label>
    </listViews>
    <listViews>
        <fullName>X201</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Quarter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2008</value>
        </filters>
        <label>Test</label>
    </listViews>
    <listViews>
        <fullName>X2017</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Period_Number__c</columns>
        <columns>Related_Quarter__c</columns>
        <columns>Quarter_Name__c</columns>
        <columns>Current_Period__c</columns>
        <columns>Current_Future__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_2</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Quarter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>contains</operation>
            <value>2017</value>
        </filters>
        <label>2017</label>
    </listViews>
    <listViews>
        <fullName>X2020_NFC</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Period_Number__c</columns>
        <columns>Related_Quarter__c</columns>
        <columns>Quarter_Name__c</columns>
        <columns>Current_Period__c</columns>
        <columns>Current_Future__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2020</value>
        </filters>
        <label>2020</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2021_NFC</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Period_Number__c</columns>
        <columns>Related_Quarter__c</columns>
        <columns>Quarter_Name__c</columns>
        <columns>Current_Period__c</columns>
        <columns>Current_Future__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>2021</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nokia Financial Calendar</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Period_Number</fullName>
        <active>true</active>
        <description>This will fire when user doesn&apos;t select the Periodnumber</description>
        <errorConditionFormula>ISPICKVAL( Period_Number__c , &quot;&quot;)&amp;&amp;( $Profile.Name&lt;&gt; $Label.Data_Loader_Profile_Name )</errorConditionFormula>
        <errorDisplayField>Period_Number__c</errorDisplayField>
        <errorMessage>Please Select The Period Number</errorMessage>
    </validationRules>
</CustomObject>